[gd_scene load_steps=8 format=2]

[ext_resource path="res://TowerRelated/AbstractTower.tscn" type="PackedScene" id=1]
[ext_resource path="res://TowerRelated/Color_Orange/704/704.gd" type="Script" id=2]
[ext_resource path="res://TowerRelated/Color_Orange/704/704_MainBase.png" type="Texture" id=3]
[ext_resource path="res://TowerRelated/Color_Orange/704/704_EmblemBase.tscn" type="PackedScene" id=4]
[ext_resource path="res://TowerRelated/Color_Orange/704/704_MainBase_NoHealth.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Omni",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Omni_NoHealth",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.2018, 12.8102 )

[node name="704" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="TowerBase" parent="." index="0"]
position = Vector2( 0, -3 )

[node name="BaseSprites" parent="TowerBase/KnockUpLayer" index="0"]
position = Vector2( 0.5, 0 )
frames = SubResource( 1 )
animation = "Omni_NoHealth"

[node name="Emblem_Fire" parent="TowerBase/KnockUpLayer" index="1" instance=ExtResource( 4 )]
position = Vector2( -15.5, 3 )

[node name="Emblem_Explosive" parent="TowerBase/KnockUpLayer" index="2" instance=ExtResource( 4 )]
position = Vector2( 0, 12 )

[node name="Emblem_ToughnessPierce" parent="TowerBase/KnockUpLayer" index="3" instance=ExtResource( 4 )]
position = Vector2( 16.5, 3 )

[node name="CollisionShape" parent="." index="1"]
position = Vector2( 0, -4 )
shape = SubResource( 2 )
